Fixed spelling mistakes
Fixed spelling mistakes

--- a/PredictUSIncome.ipynb
+++ b/PredictUSIncome.ipynb
@@ -12,14 +12,23 @@
    "metadata": {},
    "source": [
     "I attempt to predict income using the 1994 census bureau database dataset. The description of the variables can be found at \n",
-    "Due to the size of the dataset, I don't have to consider computational overheard when choosing a machine learning algorithm. I will analyze the accuracy of 5 algorithms. Among those 5, I will chose 2 based on performance and create a seperate ensemble model. "
+    "Due to the size of the dataset, I don't have to consider computational overheard when choosing a machine learning algorithm. I will analyze the accuracy of 5 algorithms. Among those 5, I will choose 2 based on performance and create a seperate ensemble model. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Anaconda3\\lib\\site-packages\\sklearn\\ensemble\\weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
+      "  from numpy.core.umath_tests import inner1d\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -1970,7 +1979,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before creating an ensemble model, I will use GridSearch to find optimal hyperparameters for the 3 base models. Due to machine processing power limitations, I will reduce the folds and decrease the considered number of hyperparameter values.  "
+    "Before creating an ensemble model, I will use GridSearch to find optimal hyperparameters for the 2 base models. Due to machine processing power limitations, I will reduce the folds and decrease the considered number of hyperparameter values.  "
    ]
   },
   {
@@ -2096,7 +2105,9 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ensemble_voting_model = VotingClassifier(estimators=[('ada',ada_best_estimator),('xgboost',xgboost_best_estimator)], voting='soft', n_jobs=4)\n",
